<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic Strings -->
    <string name="generic_empty_string">""</string>
    <string name="app_menu_infoTitle">info</string>

    <!-- App 000: Table of Contents -->
    <string name="app_000_title">101 Android Apps</string>
    <string name="app_000_shortDescription">An open source collection of simple Android apps</string>
    <string name="app_000_item_icon">A small icon representing the app</string>
    <!-- App 001 -->
    <string name="app_001_title">HelloWorld</string>
    <string name="app_001_shortDescription">displays the world famous hello world string</string>
    <string name="app_001_hello_world">Hello world!</string>
    <!-- App 002 -->
    <string name="app_002_title">Bouncy Balls</string>
    <string name="app_002_shortDescription">click to make bouncy balls</string>
    <!-- App 003 -->
    <string name="app_003_title">Monster Database</string>
    <string name="app_003_shortDescription">A simple crud app which keeps track of a list of monsters</string>
    <string name="app_003_editTextHint">monster name</string>
    <string name="app_003_remove_description">this button removes this monster from the database</string>
    <string name="app_003_edit_description">this button opens an edit dialog to change the monster name</string>
    <string name="app_003_edit_dialog">confirm edit</string>
    <string name="app_003_randomMonsterButton">random</string>
    <string name="app_003_addMonsterButton">add monster</string>
    <string name="app_003_noNameWarning">Due to contractual obligations the monster with no name cannot appear in this database</string>
    <!-- App 004 -->
    <string name="app_004_title">3D Bouncy Ball</string>
    <string name="app_004_shortDescription">Basic OpenGL ES 2.0 scene, showing a bouncy ball</string>
    <string name="app_004_bounce">Bounce</string>
    <!-- App 005 -->
    <string name="app_005_title">An Elemental Grid</string>
    <string name="app_005_shortDescription">Elemental fun with a custom AdapterView, animations and drag\'n\'drop</string>
    <string name="app_005_addElementButton">Add Element</string>
    <string name="app_005_addMultipleElementsButton">Add 5 Elements</string>
    <string name="app_005_elementDescription">Element Image</string>
    <!-- App 006 -->
    <string name="app_006_title">Simple Camera</string>
    <string name="app_006_shortDescription">A simple camera app</string>
    <string name="app_006_cameraSelectDescription">select camera</string>
    <string name="app_006_flashButtonDescription">set flash</string>
    <string name="app_006_colorEffectDescription">select color filter</string>
    <string name="app_006_exposureButtonDescription">set exposure</string>
    <string name="app_006_settingsButtonDescription">change settings</string>
    <string name="app_006_galleryButtonDescription">go to gallery</string>
    <!-- App 007 -->
    <string name="app_007_title">A Wikipedia Game</string>
    <string name="app_007_shortDescription">Identify Wikipedia articles by their outgoing links</string>
    <string name="app_007_downloadProgress">Questions Downloaded</string>
    <string name="app_007_downloadFailure">Failed to connect to Wikipedia</string>
    <string name="app_007_easy">Easy</string>
    <string name="app_007_normal">Normal</string>
    <string name="app_007_hard">Hard</string>
    <string name="app_007_headerDescription">Wikilinks header</string>
    <string name="app_007_playImageButtonDescription">play wikilinks</string>
    <string name="app_007_backgroundImageDescription">Wikilinks background</string>
    <string name="app_007_highScoresImageButtonDescription">High score</string>
    <string name="app_007_reviewImageButtonDescription">Review</string>
    <string name="app_007_difficultyHeaderImageDescription">Difficulty header</string>
    <string name="app_007_hardImageButtonDescription">Hard difficulty</string>
    <string name="app_007_mediumImageButtonDescription">Medium difficulty</string>
    <string name="app_007_easyImageButtonDescription">Easy difficulty</string>
    <!-- App 008 -->
    <string name="app_008_title">Open Overheid</string>
    <string name="app_008_shortDescription">Dutch government public feed reader</string>
    <string name="app_008_noActionBarError">Error: ActionBar not available</string>
    <!-- App 009 -->
    <string name="app_009_title">Thumbs Up Web Server</string>
    <string name="app_009_shortDescription">A simple web server</string>
    <string name="app_009_server_start_failure">Failed to start the ThumbsUp server</string>
    <string name="app_009_service_title">Thumbs Up Service</string>
    <string name="app_009_server_running_message">Server running at</string>
    <string name="app_009_start_server_instruction">Flip the thumb to launch the server</string>
    <string name="app_009_thumbsUpButtonDescriptionStatusDown">thumbs up server status: down</string>
    <!-- App 010 -->
    <string name="app_010_title">Compass</string>
    <string name="app_010_shortDescription">Basic compass app</string>
    <string name="app_010_lock_screen">Lock Screen Rotation</string>



</resources>